Fix text cut off

--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -9,7 +9,6 @@
     color: #fff;
     font-size: calc(1rem + 0.4vw);
     margin-top: 1.5vw;
-    line-height: 18px;
     width: 24vw;
     text-align: left;
 }
